[gd_scene load_steps=13 format=2]

[ext_resource path="res://Body/Body.gd" type="Script" id=1]
[ext_resource path="res://Map/whitesquare.png" type="Texture" id=2]
[ext_resource path="res://Body/cauldron_back.png" type="Texture" id=3]
[ext_resource path="res://UI/Buttons/button_Bag.png" type="Texture" id=4]
[ext_resource path="res://UI/Buttons/button_Exit.png" type="Texture" id=5]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://UI/Shapes/squareshadow.png" type="Texture" id=8]
[ext_resource path="res://UI/Shapes/statBarRect Back.png" type="Texture" id=9]
[ext_resource path="res://Bag/UI Elements/button_Bag_ScrollUp.png" type="Texture" id=10]
[ext_resource path="res://Bag/UI Elements/button_Bag_ScrollDown.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 148, 350 )

[node name="Node2D" type="Node2D"]
z_index = 29
script = ExtResource( 1 )

[node name="back" type="Node2D" parent="."]

[node name="back2" type="Sprite" parent="back"]
modulate = Color( 0.552941, 0.552941, 0.552941, 1 )
position = Vector2( 512, 900 )
scale = Vector2( 1.008, 0.584 )
texture = ExtResource( 2 )

[node name="icon_RoomCauldron" type="Sprite" parent="back"]
visible = false
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( 509, 968 )
scale = Vector2( 0.326055, 0.326055 )
texture = ExtResource( 3 )

[node name="bodyButtonMenu" type="Node2D" parent="back"]
position = Vector2( 333, 655 )
__meta__ = {
"_edit_group_": true
}

[node name="button_Body" type="Sprite" parent="back/bodyButtonMenu"]
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 5 )

[node name="buttonBodyMenu" type="TextureButton" parent="back/bodyButtonMenu"]
margin_left = -35.0
margin_top = -35.0
margin_right = 35.0
margin_bottom = 35.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bagButtonMenu" type="Node2D" parent="back"]
position = Vector2( 333, 741 )
__meta__ = {
"_edit_group_": true
}

[node name="button_Bag" type="Sprite" parent="back/bagButtonMenu"]
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 4 )

[node name="buttonBagMenu" type="TextureButton" parent="back/bagButtonMenu"]
margin_left = -35.0
margin_top = -35.0
margin_right = 35.0
margin_bottom = 35.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="positive" type="Node2D" parent="."]
position = Vector2( -457, 604 )

[node name="squareshadow2" type="NinePatchRect" parent="positive"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = 79.0
margin_top = -674.0
margin_right = 3069.0
margin_bottom = 6576.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
patch_margin_left = 332
patch_margin_top = 339
patch_margin_right = 328
patch_margin_bottom = 314
__meta__ = {
"_edit_use_anchors_": false
}

[node name="whitesquare2" type="Sprite" parent="positive"]
modulate = Color( 0.286275, 0.282353, 0.282353, 1 )
position = Vector2( 228.5, -312.5 )
scale = Vector2( 0.271, 0.697 )
texture = ExtResource( 2 )

[node name="bodyMutations" type="Node2D" parent="positive"]

[node name="Label" type="Node2D" parent="positive"]
visible = false
position = Vector2( 51, -65 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow2" type="NinePatchRect" parent="positive/Label"]
modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 36.0
margin_top = -532.0
margin_right = 5696.0
margin_bottom = 141.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )
patch_margin_left = 332
patch_margin_top = 339
patch_margin_right = 328
patch_margin_bottom = 314
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBack" type="NinePatchRect" parent="positive/Label"]
margin_left = 40.0
margin_top = -527.0
margin_right = 5540.0
margin_bottom = -47.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1000, 1000 )
patch_margin_left = 122
patch_margin_top = 123
patch_margin_right = 119
patch_margin_bottom = 122
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Namee" type="Label" parent="positive/Label"]
margin_left = 44.0
margin_top = -527.0
margin_right = 310.0
margin_bottom = -504.0
custom_fonts/font = SubResource( 1 )
text = "Good Mutations"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftScrollArea" type="Area2D" parent="positive"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="positive/leftScrollArea"]
position = Vector2( 218, -313 )
shape = SubResource( 2 )

[node name="pageUpButton" type="Node2D" parent="positive"]
position = Vector2( -41, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="scrollPageButton" type="Sprite" parent="positive/pageUpButton"]
position = Vector2( 91, -418.25 )
scale = Vector2( 0.2275, 0.2275 )
texture = ExtResource( 10 )

[node name="leftbutton_ScrollPageUp" type="TextureButton" parent="positive/pageUpButton"]
margin_left = 80.0
margin_top = -531.0
margin_right = 102.0
margin_bottom = -306.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pageDownButton" type="Node2D" parent="positive"]
position = Vector2( -41, 229 )
__meta__ = {
"_edit_group_": true
}

[node name="scrollPageButton" type="Sprite" parent="positive/pageDownButton"]
position = Vector2( 91, -418.25 )
scale = Vector2( 0.2275, 0.2275 )
texture = ExtResource( 11 )

[node name="leftbutton_ScrollPageDown" type="TextureButton" parent="positive/pageDownButton"]
margin_left = 80.0
margin_top = -531.0
margin_right = 102.0
margin_bottom = -306.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="negative" type="Node2D" parent="."]
position = Vector2( 1023, 604 )

[node name="squareshadow2" type="NinePatchRect" parent="negative"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = 79.0
margin_top = -674.0
margin_right = 3069.0
margin_bottom = 6576.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )
patch_margin_left = 332
patch_margin_top = 339
patch_margin_right = 328
patch_margin_bottom = 314
__meta__ = {
"_edit_use_anchors_": false
}

[node name="whitesquare2" type="Sprite" parent="negative"]
modulate = Color( 0.286275, 0.282353, 0.282353, 1 )
position = Vector2( 228.5, -312.5 )
scale = Vector2( 0.271, 0.697 )
texture = ExtResource( 2 )

[node name="bodyMutations" type="Node2D" parent="negative"]

[node name="Label" type="Node2D" parent="negative"]
visible = false
position = Vector2( 51, -65 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow2" type="NinePatchRect" parent="negative/Label"]
modulate = Color( 1, 1, 1, 0.27451 )
margin_left = 36.0
margin_top = -532.0
margin_right = 5696.0
margin_bottom = 141.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )
patch_margin_left = 332
patch_margin_top = 339
patch_margin_right = 328
patch_margin_bottom = 314
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBack" type="NinePatchRect" parent="negative/Label"]
margin_left = 40.0
margin_top = -527.0
margin_right = 5540.0
margin_bottom = -47.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1000, 1000 )
patch_margin_left = 122
patch_margin_top = 123
patch_margin_right = 119
patch_margin_bottom = 122
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Namee" type="Label" parent="negative/Label"]
margin_left = 44.0
margin_top = -527.0
margin_right = 310.0
margin_bottom = -504.0
custom_fonts/font = SubResource( 1 )
text = "Good Mutations"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightScrollArea" type="Area2D" parent="negative"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="negative/rightScrollArea"]
position = Vector2( 239, -313 )
shape = SubResource( 2 )

[node name="pageUpButton" type="Node2D" parent="negative"]
position = Vector2( 316, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="scrollPageButton" type="Sprite" parent="negative/pageUpButton"]
position = Vector2( 91, -418.25 )
scale = Vector2( 0.2275, 0.2275 )
texture = ExtResource( 10 )

[node name="rightbutton_ScrollPageUp" type="TextureButton" parent="negative/pageUpButton"]
margin_left = 80.0
margin_top = -531.0
margin_right = 102.0
margin_bottom = -306.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pageDownButton" type="Node2D" parent="negative"]
position = Vector2( 316, 229 )
__meta__ = {
"_edit_group_": true
}

[node name="scrollPageButton" type="Sprite" parent="negative/pageDownButton"]
position = Vector2( 91, -418.25 )
scale = Vector2( 0.2275, 0.2275 )
texture = ExtResource( 11 )

[node name="rightbutton_ScrollPageDown" type="TextureButton" parent="negative/pageDownButton"]
margin_left = 80.0
margin_top = -531.0
margin_right = 102.0
margin_bottom = -306.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="back/bodyButtonMenu/buttonBodyMenu" to="." method="_on_buttonBodyMenu_button_down"]
[connection signal="button_up" from="back/bodyButtonMenu/buttonBodyMenu" to="." method="_on_buttonBodyMenu_button_up"]
[connection signal="pressed" from="back/bodyButtonMenu/buttonBodyMenu" to="." method="_on_buttonBodyMenu_pressed"]
[connection signal="button_down" from="back/bagButtonMenu/buttonBagMenu" to="." method="_on_buttonBagMenu_button_down"]
[connection signal="button_up" from="back/bagButtonMenu/buttonBagMenu" to="." method="_on_buttonBagMenu_button_up"]
[connection signal="pressed" from="back/bagButtonMenu/buttonBagMenu" to="." method="_on_buttonBagMenu_pressed"]
[connection signal="area_entered" from="positive/leftScrollArea" to="." method="_on_leftScrollArea_area_entered"]
[connection signal="area_exited" from="positive/leftScrollArea" to="." method="_on_leftScrollArea_area_exited"]
[connection signal="button_down" from="positive/pageUpButton/leftbutton_ScrollPageUp" to="." method="_on_leftbutton_ScrollPageUp_button_down"]
[connection signal="button_up" from="positive/pageUpButton/leftbutton_ScrollPageUp" to="." method="_on_leftbutton_ScrollPageUp_button_up"]
[connection signal="pressed" from="positive/pageUpButton/leftbutton_ScrollPageUp" to="." method="_on_leftbutton_ScrollPageUp_pressed"]
[connection signal="button_down" from="positive/pageDownButton/leftbutton_ScrollPageDown" to="." method="_on_leftbutton_ScrollPageDown_button_down"]
[connection signal="button_up" from="positive/pageDownButton/leftbutton_ScrollPageDown" to="." method="_on_leftbutton_ScrollPageDown_button_up"]
[connection signal="pressed" from="positive/pageDownButton/leftbutton_ScrollPageDown" to="." method="_on_leftbutton_ScrollPageDown_pressed"]
[connection signal="area_entered" from="negative/rightScrollArea" to="." method="_on_rightScrollArea_area_entered"]
[connection signal="area_exited" from="negative/rightScrollArea" to="." method="_on_rightScrollArea_area_exited"]
[connection signal="button_down" from="negative/pageUpButton/rightbutton_ScrollPageUp" to="." method="_on_rightbutton_ScrollPageUp_button_down"]
[connection signal="button_up" from="negative/pageUpButton/rightbutton_ScrollPageUp" to="." method="_on_rightbutton_ScrollPageUp_button_up"]
[connection signal="pressed" from="negative/pageUpButton/rightbutton_ScrollPageUp" to="." method="_on_rightbutton_ScrollPageUp_pressed"]
[connection signal="button_down" from="negative/pageDownButton/rightbutton_ScrollPageDown" to="." method="_on_rightbutton_ScrollPageDown_button_down"]
[connection signal="button_up" from="negative/pageDownButton/rightbutton_ScrollPageDown" to="." method="_on_rightbutton_ScrollPageDown_button_up"]
[connection signal="pressed" from="negative/pageDownButton/rightbutton_ScrollPageDown" to="." method="_on_rightbutton_ScrollPageDown_pressed"]
